Limit build branches.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ script:
   - source /opt/qt*/bin/qt*-env.sh
   - /opt/qt*/bin/qmake CONFIG+=release gibs.pro
   - make -j
+
+branches:
+  only:
+    - master
+    - dev
