--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ os: linux
 sudo: required
 
 before_script:
-#  - sudo apt-get install qt5-qmake
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
-  - sudo apt-get install qt5-default qttools5-dev-tools
+  - sudo apt-get install qt510-meta-minimal
 
 script:
+  - source /opt/qt510/bin/qt510-env.sh
   - qmake -version
   - qmake CONFIG+=release gibs.pro
   - make -j
@@ -23,6 +23,6 @@ script:
 # Disable builds - need to figure out how to get newest Qt.
 branches:
   only:
-  - no_such_branch
-#    - master
-#    - dev
+    - master
+    - dev
+#  - no_such_branch
