--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ sudo: required
 
 before_script:
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-  - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty
+  - sudo add-apt-repository --yes ppa:beineri/opt-qt-5.10.1-trusty
   - sudo apt-get update -qq
-  - sudo apt-get install qt510-meta-minimal
+  - sudo apt-get install -y qt510-meta-minimal
 
 script:
   - source /opt/qt510/bin/qt510-env.sh
