--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ before_script:
   - sudo add-apt-repository --yes ppa:beineri/opt-qt-5.10.1-trusty
   - sudo apt-get update -qq
   - sudo apt-get install -y qt510-meta-minimal
+  # C++14
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  # C++14
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
 
 script:
   - source /opt/qt510/bin/qt510-env.sh
