--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: cpp
 dist: trusty
 sudo: required
-
-- os: linux
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - g++-7
+os: linux
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-7
     env:
       - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
