Fix path to gibs executable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,12 @@ script:
   - qmake -version
   - qmake CONFIG+=release gibs.pro
   - make -j
-  - cp gibs deployment/gibs
+  - cp build/out/gibs deployment/gibs
   - cd deployment
   - wget https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
   - chmod +x linuxdeployqt-continuous-x86_64.AppImage
   - ../scripts/deploy-linux.sh ./linuxdeployqt-continuous-x86_64.AppImage $(which qmake) gibs.desktop
+  - cd ..
 
 # Disable builds - need to figure out how to get newest Qt.
 branches:
