--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,11 @@ before_script:
 
 script:
   - source /opt/qt510/bin/qt510-env.sh
+  - g++ --version
   - qmake -version
   - qmake CONFIG+=release gibs.pro
-  - make -j
-  - cp build/out/gibs deployment/gibs
+  - make -j `nproc`
+  - cp gibs/build/out/gibs deployment/gibs
   - cd deployment
   - wget https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
   - chmod +x linuxdeployqt-continuous-x86_64.AppImage
